# homebrew

./: .gitignore  README.md  ftp-setup.sh
3ds/: README.md
3ds/3dslink/: 3dslink-demo.3dsx  3dslink.3dsx
3ds/3dslink/source/: 3dslink-demo.c
3ds/custom-font/source/: main.c
3ds/hello_world/: README.md  hello_world.3dsx
3ds/hello_world/source/: main.c
3ds/touch-screen/: touch-screen.3dsx
psp/: README.md
vita/alter-ego-v1.0/: CMakeLists.txt  server.py
vita/alter-ego-v4.0/: Makefile  main.cpp
vita/alter-ego-v4.0/sce_sys/livearea/contents/: template.xml
vita/alter-ego-v5.0/: CMakeLists.txt
vita/alter-ego-v5.0/src/: main.cpp
vita/alter-ego/src/: main.c
vita/lua/image-viewer/: .gitignore
vita/lua/lpp-builder/: Image Viewer.vpk
vita/mic/: README.md
vita/tips-and-tricks/: README.md  daemon.conf
vita/vitagl/: README.md  Standardized_Makefile
vita/vitagl/lattice-gradient/: immediate_mode.velf  immediate_mode.vpk  lattice-gradient.velf  lattice-gradient.vpk  main.c  param.sfo
vita/vitagl/synthwave/: Makefile  main.c  param.sfo  synthwave.c  synthwave.elf  synthwave.h  synthwave.velf  synthwave.vpk
vita/wifi-mic/: vita-mic.py
